--- a/portfolio.html
+++ b/portfolio.html
@@ -14,18 +14,18 @@
 <body>
 <!--HEADER-->
     <header class="header">
-        <div class="container header-container">
-            <nav class="header-nav">
-                <a class="header-logo link" href="./index.html">Web<span>Studio</span></a>
-                <ul class="header-list list">
-                    <li class="header-item"><a class="header-link link" href="./index.html">Студія</a></li>
-                    <li class="header-item "><a class="header-link link current-color" href="./portfolio.html">Портфоліо</a></li>
-                    <li class="header-item"><a class="header-link link" href="">Контакти</a></li>
+        <div class="container header__container">
+            <nav class="navigation">
+                <a class="logo header__logo link" href="./index.html">Web<span>Studio</span></a>
+                <ul class="navigation__list list">
+                    <li class="navigation__item"><a class="navigation__link link current-color" href="./index.html">Студія</a></li>
+                    <li class="navigation__item"><a class="navigation__link link" href="./portfolio.html">Портфоліо</a></li>
+                    <li class="navigation__item"><a class="navigation__link link" href="">Контакти</a></li>
                 </ul>
             </nav>
-                <ul class="contacts list">
-                    <li class="mail"><a class="contacts-link link" href="mailto:info@devstudio.com"> <svg class="contact-icon" width="16" height="12"><use href="./images/icons.svg#icon-mail-ico"></use></svg> info@devstudio.com</a></li>
-                    <li class="tel"><a class="contacts-link link" href="tel:+380961111111"> <svg class="contact-icon" width="10" height="16"><use href="./images/icons.svg#icon-phone-ico"></use></svg> +38 096 111 11 11</a></li>
+                <ul class="contacts header__contacts list">
+                    <li class="mail"><a class="contacts__link link" href="mailto:info@devstudio.com"> <svg class="contacts__icon" width="16" height="12"><use href="./images/icons.svg#icon-mail-ico"></use></svg> info@devstudio.com</a></li>
+                    <li class="tel"><a class="contacts__link link" href="tel:+380961111111"> <svg class="contacts__icon" width="10" height="16"><use href="./images/icons.svg#icon-phone-ico"></use></svg> +38 096 111 11 11</a></li>
                 </ul>
         </div>
     </header>
@@ -179,55 +179,55 @@
 <!--FOOTER--> 
     <footer class="footer">
         <div class="container">
-            <div class="footer-container footer-container-address">
-                <a class="footer-logo link" href="./index.html">Web<span>Studio</span></a>
+            <div class="footer-container footer-container__address">
+                <a class="logo footer-logo link" href="./index.html">Web<span>Studio</span></a>
                 <address class="address">
-                    <ul class="adress-list list">
-                        <li class="address-item address-link-item"><a class="address-link link" href="https://goo.gl/maps/mcbDyAHMGKXvk1hA8" target="_blank" rel="noopener noreferrer">м. Київ, пр-т Лесі Українки, 26</a></li>
-                        <li class="address-item mail-link-item"><a class="mail-link link" href="mailto:info@example.com">info@example.com</a></li>
-                        <li class="address-item"><a class="tel-link link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                    <ul class="adress__list list">
+                        <li class="address__item address__link-item"><a class="address__link link" href="https://goo.gl/maps/mcbDyAHMGKXvk1hA8" target="_blank" rel="noopener noreferrer">м. Київ, пр-т Лесі Українки, 26</a></li>
+                        <li class="address__item mail__link-item"><a class="mail__link link" href="mailto:info@example.com">info@example.com</a></li>
+                        <li class="address__item"><a class="tel__link link" href="tel:+380961111111">+38 096 111 11 11</a></li>
                     </ul>
                 </address>
             </div>
-            <div class="footer-container footer-container-social">
-                <h3 class="footer-join-title">Приєднуйтесь</h3>
-                <ul class="footer-social list">
-                    <li class="footer-social-item">
-                        <a href="./index.html" class="footer-social-link link" target="_blank" rel="noopener noreferrer" aria-label="instagram">
-                            <svg class="footer-social-icon" width="20" height="20">
+            <div class="footer-container footer-container__social">
+                <h3 class="footer__join-title">Приєднуйтесь</h3>
+                <ul class="footer__social list">
+                    <li class="footer__social-item">
+                        <a href="./index.html" class="footer__social-link link" target="_blank" rel="noopener noreferrer" aria-label="instagram">
+                            <svg class="footer__social-icon" width="20" height="20">
                                 <use href="./images/icons.svg#icon-instagram-social"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="footer-social-item">
-                        <a href="./index.html" class="footer-social-link link" target="_blank" rel="noopener noreferrer" aria-label="twitter">
-                            <svg class="footer-social-icon" width="20" height="20">
+                    <li class="footer__social-item">
+                        <a href="./index.html" class="footer__social-link link" target="_blank" rel="noopener noreferrer" aria-label="twitter">
+                            <svg class="footer__social-icon" width="20" height="20">
                                 <use href="./images/icons.svg#icon-twitter-social"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="footer-social-item">
-                        <a href="./index.html" class="footer-social-link link" target="_blank" rel="noopener noreferrer" aria-label="facebook">
-                            <svg class="footer-social-icon" width="20" height="20">
+                    <li class="footer__social-item">
+                        <a href="./index.html" class="footer__social-link link" target="_blank" rel="noopener noreferrer" aria-label="facebook">
+                            <svg class="footer__social-icon" width="20" height="20">
                                 <use href="./images/icons.svg#icon-facebook-social"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="footer-social-item">
-                        <a href="./index.html" class="footer-social-link link" target="_blank" rel="noopener noreferrer" aria-label="linkedin">
-                            <svg class="footer-social-icon" width="20" height="20">
+                    <li class="footer__social-item">
+                        <a href="./index.html" class="footer__social-link link" target="_blank" rel="noopener noreferrer" aria-label="linkedin">
+                            <svg class="footer__social-icon" width="20" height="20">
                                 <use href="./images/icons.svg#icon-linkedin-social"></use>
                             </svg>
                         </a>
                     </li>                   
                 </ul>
             </div>
-            <div class="footer-container-subscribe">
-                <p class="footer-subscribe-title">Підпишіться на розсилку</p>
+            <div class="footer-subscribe">
+                <p class="footer-subscribe__title">Підпишіться на розсилку</p>
                 <form class="email-form">
-                    <input type="email" name="email" class="email-form-input" placeholder="E-mail" required/>
-                    <button type="submit" class="email-form-btn btn">Підписатися
-                        <svg class="form-btn-icon" width="24" height="24">
+                    <input type="email" name="email" class="email-form__input" placeholder="E-mail" required/>
+                    <button type="submit" class="form__btn btn">Підписатися
+                        <svg class="form-btn__icon" width="24" height="24">
                             <use href="./images/icons.svg#icon-send-footer-icon"></use>
                         </svg>
                     </button>
