--- a/portfolio.html
+++ b/portfolio.html
@@ -18,8 +18,8 @@
             <nav class="navigation">
                 <a class="logo header__logo link" href="./index.html">Web<span>Studio</span></a>
                 <ul class="navigation__list list">
-                    <li class="navigation__item"><a class="navigation__link link current-color" href="./index.html">Студія</a></li>
-                    <li class="navigation__item"><a class="navigation__link link" href="./portfolio.html">Портфоліо</a></li>
+                    <li class="navigation__item"><a class="navigation__link link" href="./index.html">Студія</a></li>
+                    <li class="navigation__item"><a class="navigation__link link current-color" href="./portfolio.html">Портфоліо</a></li>
                     <li class="navigation__item"><a class="navigation__link link" href="">Контакти</a></li>
                 </ul>
             </nav>
