--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <div class="container">
                 <h2 class="team__title">Наша команда</h2>
                 <ul class="team__cards list">
-                    <li class="card card-box">
+                    <li class="card card__box">
                         <img class="team__img" src="images/photo-1.jpg" alt="Ігор Дем'яненко" width="270" height="260">
                     <div class="card__wrap">
                         <h3 class="card__title">Ігор Дем'яненко</h3>
@@ -149,7 +149,7 @@
                         </ul>
                     </div>
                     </li>
-                    <li class="card card-box">
+                    <li class="card card__box">
                         <img class="team__img" src="images/photo-2.jpg" alt="Ольга Рєпіна" width="270" height="260">
                     <div class="card__wrap">
                         <h3 class="card__title">Ольга Рєпіна</h3>
@@ -186,7 +186,7 @@
                         </ul>
                     </div>
                     </li>
-                    <li class="card card-box">
+                    <li class="card card__box">
                         <img class="team__img" src="images/photo-3.jpg" alt="Микола Тарасов" width="270" height="260">
                     <div class="card__wrap">
                         <h3 class="card__title">Микола Тарасов</h3>
@@ -223,7 +223,7 @@
                         </ul>
                     </div>
                     </li>
-                    <li class="card card-box">
+                    <li class="card card__box">
                         <img class="team__img" src="images/photo-4.jpg" alt="Михайло Єрмаков" width="270" height="260">
                     <div class="card__wrap">
                         <h3 class="card__title">Михайло Єрмаков</h3>
